--- a/index.html
+++ b/index.html
@@ -7,79 +7,65 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <style>
         body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #050505; /* Tam siyah */
-            color: #ffffff;
+            margin: 0; padding: 0; width: 100%; height: 100%;
+            background-color: #0d0d0d; color: #ffffff;
             font-family: 'Montserrat', sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
+            overflow: hidden; display: flex;
+            justify-content: center; align-items: center;
         }
 
-        /* ANA BAŞLIK - SERİ HIZ (1.8s) */
+        .container { text-align: center; }
+
         .brand-name {
-            font-size: 4.5rem;
-            font-weight: 700;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            margin-bottom: 5px;
-            opacity: 0;
-            animation: moveUpFade 1.8s ease-out forwards;
+            font-size: 4.5rem; font-weight: 700; letter-spacing: 2px;
+            text-transform: uppercase; margin: 0; opacity: 0;
+            animation: fastFade 1.5s ease-out forwards;
         }
 
-        /* COMING SOON - KÜÇÜK HARF */
         .coming-soon {
-            font-size: 1.1rem;
-            font-weight: 300;
-            letter-spacing: 12px;
-            color: #777;
-            text-transform: lowercase;
-            opacity: 0;
-            animation: moveUpFade 1.8s ease-out 0.4s forwards;
+            font-size: 1.1rem; font-weight: 300; letter-spacing: 12px;
+            color: #888; text-transform: lowercase; margin-top: 10px;
+            opacity: 0; animation: fastFade 1.5s ease-out 0.3s forwards;
         }
 
-        /* SOL ALT KÖŞE - ŞİMDİ GÖRÜNÜR */
+        /* MİLLİMETRİK İNCE AYAR BÖLGESİ */
+        .footer-fixed {
+            position: fixed;
+            bottom: 60px; /* 150'den 60'a indirdik (biraz aşağı indi) */
+            left: 45px;   /* 60'tan 45'e çektik (biraz sola gitti) */
+            z-index: 100;
+        }
+
         .footer-text {
-            position: fixed; /* Ekrana çiviledik */
-            bottom: 40px;    /* Biraz yukarı aldık ki kaybolmasın */
-            left: 40px;      /* Biraz içeri aldık */
-            font-size: 0.8rem;
-            color: #555;     /* Rengini biraz açtım, artık okunur */
-            letter-spacing: 1.5px;
-            font-weight: 400;
-            opacity: 0;
-            animation: simpleFade 2s ease-in 1.5s forwards;
+            font-size: 0.8rem; color: #555; letter-spacing: 1px;
+            white-space: nowrap; opacity: 0;
+            animation: onlyFade 2s ease-in 1.5s forwards;
         }
 
-        @keyframes moveUpFade {
-            0% { opacity: 0; transform: translateY(20px); filter: blur(5px); }
-            100% { opacity: 1; transform: translateY(0); filter: blur(0); }
+        @keyframes fastFade {
+            0% { opacity: 0; transform: translateY(15px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
 
-        @keyframes simpleFade {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
+        @keyframes onlyFade { from { opacity: 0; } to { opacity: 1; } }
 
-        /* MOBİL DÜZENLEME */
         @media (max-width: 768px) {
-            .brand-name { font-size: 2rem; }
-            .coming-soon { font-size: 0.8rem; letter-spacing: 4px; }
-            .footer-text { bottom: 20px; left: 20px; font-size: 0.6rem; }
+            .brand-name { font-size: 2.2rem; }
+            .coming-soon { font-size: 0.8rem; letter-spacing: 5px; }
+            .footer-fixed { left: 25px; bottom: 30px; }
         }
     </style>
 </head>
 <body>
 
-    <div class="brand-name">CYRIPTOWORK</div>
-    <div class="coming-soon">coming soon</div>
+    <div class="container">
+        <div class="brand-name">CYRIPTOWORK</div>
+        <div class="coming-soon">coming soon</div>
+    </div>
 
-    <div class="footer-text">© 2026 Ayberk Corporation</div>
+    <div class="footer-fixed">
+        <div class="footer-text">© 2026 Ayberk Corporation</div>
+    </div>
 
 </body>
-    </html>
+        </html>
